After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771677 - Time shown incorrectly in search results
Time shown incorrectly in search results
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: User Interface
3.21.x
Other Linux
: Normal major
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-20 02:08 UTC by Mohammed Sadiq
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Calendar search (image) (44.12 KB, image/png)
2016-09-20 02:08 UTC, Mohammed Sadiq
  Details
search-view: fix time label (930 bytes, patch)
2016-09-28 02:19 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Mohammed Sadiq 2016-09-20 02:08:46 UTC
Created attachment 335886 [details]
Calendar search (image)

Calendar search results shows time incorrectly. 
Please see the image attached.

In the attached image, All day event displays 5:30 as time (probably my deviation from UTC. I'm on IST, not sure though). And timed events are shown as All day
Comment 1 Georges Basile Stavracas Neto 2016-09-28 02:19:35 UTC
Created attachment 336404 [details] [review]
search-view: fix time label

We want to show "All day" when the event is all day, not
when it ~isn't~ all day.
Comment 2 Georges Basile Stavracas Neto 2016-09-28 02:20:43 UTC
Thanks for the report!

Attachment 336404 [details] pushed as e79bdfb - search-view: fix time label