search-view: fix time label

We want to show "All day" when the event is all day, not
when it ~isn't~ all day.

https://bugzilla.gnome.org/show_bug.cgi?id=771677